# stac-rl

./: .gitignore  CMakeLists.txt  COLAB_GUIDE.md  COLAB_QUICK_START.md  COMPLETE_TECHNICAL_GUIDE.tex  CUDA_TRAINING.md  IMPLEMENTATION_SUMMARY.md  README.md  colab_setup.ipynb  design_document.txt  theoretical_and_systems_guide.tex
cuda/: CMakeLists.txt  cuda_ops.cu  cuda_ops.cuh  cuda_ops_stub.hpp  cuda_wrappers.cu  flash_attention_kernel.cu  flash_attention_kernel.cuh
include/common/: Config.hpp  Types.hpp
include/env/: Adapter.hpp  Environment.hpp  Observation.hpp
include/model/: ActionSpace.hpp  FlashTransformer.hpp  STACFlashModel.hpp
include/training/: Optimizer.hpp  PPO.hpp
scripts/: python_adapter.py  self_play.py  train_pytorch.py
src/: main_infer.cpp  main_train.cpp
src/env/: Environment.cpp  UCIAdapter.cpp
src/model/: FlashTransformer.cpp  STACFlashModel.cpp
src/training/: Optimizer.cpp  PPO.cpp  PPO_old.cpp
